Changes between 3.0.x and 4.0.0-dev:
--------------------------------

Platform support changes:
 * 4.0.x requires:
     - Windows 7/2008 R2 or later (with KB2533623 installed)
     - macOS 10.10 or later
     - iOS 9 or later
     - Android 4.1.x or later (API-16)
     - GCC 5.0 or Clang 3.4 (or equivalent)

Codecs:
 * Support for experimental AV1 video encoding
 * WebVTT encoder


Changes between 2.2.x and 3.0.0-git:
--------------------------------

Platform support changes:
 * 3.0.x will be LTS (on a best-effort basis) that will be the last
   working version for a lot of systems.
   Indeed 3.0.x will be the last releases running on:
     - Windows XP, Vista, and the servers equivalent of those releases
     - macOS 10.7, 10,8 & 10.9, iOS 7 & 8
     - Android 2.x, 3.x & 4.0.x
     - Compilers before gcc 5.0 and clang 3.4

 * For 3.0, please note:
     * The Windows XP/2003/2003R2 support for VLC is now on a best-efforts basis:
       it should work, but not without limitations.
       libVLC support for Windows XP is deprecated.
       You _really_ should upgrade.
     * Windows Vista (all versions) without Platform Upgrade is not supported.
     * Linux support requires now a kernel newer than 2.6.26
     * Mac OS X 10.6 support is now removed. You need OS X 10.7.

Core:
 * Support network browsing for distant file system (SMB, FTP, SFTP, NFS...)
   and rewrite the parsing of the media files
 * Support keystores: fetch and store passwords securely (sic!) for common
   protocols (HTTP, SMB, SFTP, FTP, RTSP ...)
 * Autodetect external audio tracks (ac3, m4a, aac, dts...), similar to subtitles
 * Support HDMI passthrough for Audio HD codecs, like E-AC3, TrueHD or DTS-HD
 * Support for 12bits codec and extended colorspaces (HDR)
 * Support output renderers, like ChromeCast
 * VLC now assumes vlcrc config file is in UTF-8
 * Support portable version of Windows build (create a "portable/" folder)
 * Support wayland surface type