@@ -31,7 +31,6 @@ SDLCONF := $(HOSTCONF) \
 	--disable-file \
 	--disable-assembly \
 	--disable-video-x11 \
-	--disable-video-aalib \
 	--disable-video-dga \
 	--disable-video-fbcon \
 	--disable-video-directfb \
