@@ -1161,7 +1161,6 @@ modules/video_filter/sharpen.c
 modules/video_filter/transform.c
 modules/video_filter/vhs.c
 modules/video_filter/wave.c
-modules/video_output/aa.c
 modules/video_output/android/window.c
 modules/video_output/caca.c
 modules/video_output/caopengllayer.m
